--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#projects"></a>projects</li>
                 <li><a href="#Contact-me"></a>Contact me</li>
             </ul>
-            
+
             <button class="hamburguer" id="hamburguer">
                 <i class="fas fa-bars"></i>
             </button>
@@ -66,8 +66,7 @@
     <section class="sub-section" id="about-me">
         <div class="information">
             <h2>about me</h2>
-            <p>Hola minombre es Andres , soy junior Front-end Developer , con muhcas ganas de seguir creciendo en esta
-                area de la tecnologia </p>
+            <p>Hi, my name is Andres Figueroa, I am a Junior Front-end Developer, With a lot of expextation to grow up in this thecnologic area, I would like to keep improving my skills.</p>
         </div>
         <div class="headshot-container">
             <img class="headshot" src="src//images/tate.jpg" alt="andres hedshot" />
@@ -80,28 +79,28 @@
             <div class="project-card">
                 <img class="project-image" src="" alt="project One Image"/>
                 <h3>Project One</h3>
-                <p class="subtext">Mi primer proyecto   y un poco de texto. disfrute mucho haciendo este proyecto</p>
+                <p class="subtext">My First Proyect and a lit bit of text, I enjoy a lot doing this proyect.</p>
                 <hr/>
                 <p class="subtext"><a class="project-link" href="https://www.github.com/andrestate47">viw here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="src/images/MiPrimeraPaginaWeb.png" alt="project One Image"/>
                 <h3>Project Two</h3>
-                <p class="subtext">Mi primer proyecto   y un poco de texto. disfrute mucho haciendo este proyecto</p>
+                <p class="subtext">My First Proyect and a lit bit of text, I enjoy a lot doing this proyect.</p>
                 <hr/>
                 <p class="subtext"><a href="https://www.github.com/andrestate47">viw here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="src/images/PaginaWeb.png" alt="project One Image"/>
                 <h3>Project Three</h3>
-                <p class="subtext">Mi primer proyecto   y un poco de texto. disfrute mucho haciendo este proyecto</p>
+                <p class="subtext">My First Proyect and a lit bit of text, I enjoy a lot doing this proyect.</p>
                 <hr/>
                 <p class="subtext"><a href="https://www.github.com/andrestate47">viw here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="src/images/Calculadora.png" alt="project One Image"/>
                 <h3>Project Four</h3>
-                <p class="subtext">Mi primer proyecto   y un poco de texto. disfrute mucho haciendo este proyecto</p>
+                <p class="subtext">My First Proyect and a lit bit of text, I enjoy a lot doing this proyect.</p>
                 <hr/>
                 <p class="subtext"><a href="https://www.github.com/andrestate47">viw here</a></p>
             </div>
